# godworks-open-weights-network

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTOR_RIGOR.md  HANDOFF.md  MISSING_BRICKS.md  Makefile  PATCH_PROMPT.md  PUBLIC_HANDOFF.md  README.md  ROADMAP.md  TASKS.md  TECH_STACK.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: small-task.md
examples/: node_card.json
gown_poc/: __init__.py  demo.py  protocol.py
schemas/: model_card.schema.json  node_card.schema.json
tests/: test_smoke.py
