[project]
name = "gown-poc"
version = "0.1.0"
description = "Open Weights Network inference mesh proof-of-concept"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Open Weights Network Contributors" }]

[project.scripts]
gown-demo = "gown_poc.demo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gown_poc"]
